[package]
name = "unnum-rs"
version = "0.0.0"
edition = "2024"
authors = ["dmyTRUEk"]

[profile.release]
opt-level = 3
# lto = "fat"
lto = "thin"
codegen-units = 1
panic = "abort"
strip = "debuginfo"
#target-cpu = "native" -> RUSTFLAGS='-C target-cpu=native'

[dependencies]
rand = "0.9.1"
rayon = "1.10.0"
